--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
+alembic==1.6.2
+cffi==1.14.5
 click==7.1.2
+cryptography==3.4.7
 dataclasses==0.8
 fastapi==0.65.1
 flake8==3.9.2
+greenlet==1.1.0
 h11==0.12.0
 importlib-metadata==4.0.1
+Mako==1.1.4
+MarkupSafe==2.0.1
 mccabe==0.6.1
 pycodestyle==2.7.0
+pycparser==2.20
 pydantic==1.8.2
 pyflakes==2.3.1
+PyMySQL==1.0.2
+python-dateutil==2.8.1
+python-editor==1.0.4
+shortuuid==1.0.1
+six==1.16.0
+SQLAlchemy==1.4.15
 starlette==0.14.2
 typing-extensions==3.10.0.0
 uvicorn==0.13.4
